# 6dof-Robot-with-MoveIt-2

./: CMakeLists.txt  README.md  package.xml
config/: centauri.ros2_control.xacro  centauri_controller.yaml  joint_centauri_controller.yaml  joint_names_centauri.SLDASM.yaml  robot_params.yaml
launch/: 1_displayCentauri.launch.py  2_gazebo.launch.py  3_centauri_gazebo_controller.launch.py  centauri_move_group_node.launch.py  gazebo.launch.py  moveit_centauri_perception.launch.py  moveit_demo.launch.py  send_target_to_moveit.launch.py
models/: 1_centauri_2023.urdf  2_centauri_2023.urdf  3_centauri_2023.urdf  4_centauri_2023.urdf  centauri.urdf  gazebo_centauri6dof.urdf
models/xacro/: centauri.urdf.xacro  centauri.xacro
ros2_control/: centauri.ros2_control.xacro
rviz/: centauri_config.rviz  centauri_config2.rviz  centauri_config3.rviz  centauri_moveit_config_demo.rviz  centauri_moveit_config_demo_empty.rviz
src/: object_frame_listener.cpp  send_target_to_moveit.cpp  trajectory_gen.py
worlds/: basic.world  empty.world  scaraWorld.world
xacro/: 3_centauri_2023.urdf.xacro  centauri.gazebo_config_control.xacro  centauri.urdf.xacro  centauri.xacro  centauri_demo_panda.urdf.xacro
