<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>centauri_6dof</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="uao@todo.todo">uao</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>control_msgs</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp</depend>
  <depend>realtime_tools</depend>
  <depend>trajectory_msgs</depend>
  <depend>sensor_msgs</depend>

  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <build_depend>ament_cmake</build_depend>
  <build_depend>ament_cmake_ros</build_depend>
  <build_depend>ament_cmake_ros</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>eigen3_cmake_module</build_depend>
  <build_depend>eigen_geometry</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rviz2</build_export_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
